working on ansible?

--- a/ansible/roles/laptop/tasks/main.yml
+++ b/ansible/roles/laptop/tasks/main.yml
@@ -25,6 +25,7 @@
       HandleLidSwitchExternalPower=ignore
       HandleLidSwitchDocked=ignore
       HandlePowerKey=ignore
+      HandlePowerKeyLongPress=poweroff
   become: true
   notify: Restart systemd-logind
 
