minute linting tweaks

--- a/ansible/roles/k3s_primary/tasks/main.yml
+++ b/ansible/roles/k3s_primary/tasks/main.yml
@@ -27,13 +27,15 @@
 - name: Check if K3s is already installed
   ansible.builtin.stat:
     path: /usr/local/bin/k3s
-  register: k3s_binary
+  register: k3s_primary_k3s_binary
 
 - name: Install K3s (primary control plane with cluster-init)
   ansible.builtin.shell:
-    cmd: curl -sfL https://get.k3s.io | sh -s - server
+    cmd: |
+      set -o pipefail
+      curl -sfL https://get.k3s.io | sh -s - server
   become: true
-  when: not k3s_binary.stat.exists
+  when: not k3s_primary_k3s_binary.stat.exists
   changed_when: true
   # cluster-init and other options come from config.yaml, not CLI flags.
   # This avoids the flag-quoting issues that caused the TLS-SAN cascade in session 8/9.
@@ -41,8 +43,8 @@
 - name: Wait for K3s to be ready
   ansible.builtin.command: k3s kubectl get nodes
   become: true
-  register: nodes_ready
-  until: nodes_ready.rc == 0
+  register: k3s_primary_nodes_ready
+  until: k3s_primary_nodes_ready.rc == 0
   retries: 20
   delay: 10
   changed_when: false
@@ -52,8 +54,8 @@
     k3s kubectl get node {{ inventory_hostname }}
     -o jsonpath='{.status.conditions[?(@.type=="Ready")].status}'
   become: true
-  register: node_ready_status
-  until: node_ready_status.stdout == "True"
+  register: k3s_primary_node_ready_status
+  until: k3s_primary_node_ready_status.stdout == "True"
   retries: 30
   delay: 10
   changed_when: false
@@ -62,16 +64,16 @@
   ansible.builtin.slurp:
     src: /var/lib/rancher/k3s/server/node-token
   become: true
-  register: k3s_token_raw
+  register: k3s_primary_k3s_token_raw
 
 - name: Set join token fact (shared with secondary play via hostvars)
   ansible.builtin.set_fact:
-    k3s_token: "{{ k3s_token_raw.content | b64decode | trim }}"
+    k3s_primary_k3s_token: "{{ k3s_primary_k3s_token_raw.content | b64decode | trim }}"
 
 - name: Verify K3s config was applied (check for kebab-case warnings)
   ansible.builtin.command: journalctl -u k3s --no-pager -n 50
   become: true
-  register: k3s_journal
+  register: k3s_primary_k3s_journal
   changed_when: false
 
 - name: Warn if config syntax issues detected
@@ -80,21 +82,22 @@
       WARNING: K3s log contains 'Unknown flag' -- config.yaml key syntax may be wrong.
       Check /etc/rancher/k3s/config.yaml uses kebab-case keys.
       See KB - TLS and Certificates.
-  when: "'Unknown flag' in k3s_journal.stdout"
+  when: "'Unknown flag' in k3s_primary_k3s_journal.stdout"
 
 - name: Verify TLS-SAN includes Tailscale hostname
-  ansible.builtin.shell: >
-    openssl x509
-    -in /var/lib/rancher/k3s/server/tls/serving-kubelet.crt
-    -text -noout
+  ansible.builtin.shell: |
+    set -o pipefail \
+    openssl x509 \
+    -in /var/lib/rancher/k3s/server/tls/serving-kubelet.crt \
+    -text -noout \
     | grep -A10 "Subject Alternative Name"
   become: true
-  register: san_check
+  register: k3s_primary_san_check
   changed_when: false
 
 - name: Show TLS SANs for confirmation
   ansible.builtin.debug:
-    msg: "{{ san_check.stdout }}"
+    msg: "{{ k3s_primary_san_check.stdout }}"
 
 - name: Install etcdctl
   ansible.builtin.shell:
